WebEco ENV has a lot of functinality we dont need. Switching to a more standard getenv process. This will need some updates for default and could be smarter about grabbing from the url if the env is missing. Module should really be dependant on theme if it renders as a page but should maybe be rethought as a node template to skip this somewhat. The scss also depended on WebEco variables which dont exist in Framework so did a general find / replace. This might need a different approach but does make it possible to style independent of the theme

--- a/umass_framework_google_search.info.yml
+++ b/umass_framework_google_search.info.yml
@@ -3,3 +3,5 @@ type: module
 description: Enables a search page where google search can be used.
 core_version_requirement: ^9 || ^10
 package: Framework
+
+dependencies: {}
